Prevent bold test in tile teasers

--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -102,6 +102,10 @@
 .tiles-y {
   .tiles-y-layout();
 }
+
+.tile-body strong {
+  font-weight: 400!important;
+}
 @media all and (min-width: @screen-sm) {
   .tiles-y {
     .tiles-y-desktop-layout();
