--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -104,7 +104,7 @@
 }
 
 .tile-body strong {
-  font-weight: 400!important;
+  font-weight: 400;
 }
 @media all and (min-width: @screen-sm) {
   .tiles-y {
