--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -481,7 +481,17 @@ nav[aria-label="Pager"] {
   }
 }
 // Events as grid elements
+
 .calendarTime {
   .text-muted;
   margin-top: 10px;
+}
+
+.legacy-tile-link {
+  color: initial;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
