--- a/less/mixins/ku-news.less
+++ b/less/mixins/ku-news.less
@@ -23,7 +23,7 @@
 .list-img-left() {
   .item-list {
     &.with-img {
-      .item {
+      .item, .legacy-tile-link {
         display: flex;
         align-items: flex-start;
       }
