--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -495,7 +495,10 @@ nav[aria-label="Pager"] {
 
   &:hover {
     color: inherit;
-    text-decoration: underline;
+
+    .item-heading {
+      text-decoration: underline;
+    }
   }
 
   &:visited {
