--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -495,6 +495,7 @@ nav[aria-label="Pager"] {
 
   &:hover {
     color: inherit;
+    text-decoration: none;
 
     .item-heading {
       text-decoration: underline;
