Science gridbox color

--- a/less/faculties/science.less
+++ b/less/faculties/science.less
@@ -22,7 +22,7 @@
 
     &.outlined {
       border: 1px solid @science-sub_1;
-      color: @science-sub_1;
+      color: @science-gridbox;
 
       &:hover {
         border: 1px solid @science-sub_1-hover;
@@ -60,7 +60,7 @@
 
     &.outlined {
       border: 1px solid @science-sub_2;
-      color: @science-sub_2;
+      color: @science-gridbox;
 
       &:hover {
         border: 1px solid @science-sub_2-hover;
@@ -98,7 +98,7 @@
 
     &.outlined {
       border: 1px solid @science-sub_3;
-      color: @ku-gridbox-text;
+      color: @science-gridbox;
 
       &:hover {
         border: 1px solid @science-sub_3-hover;
@@ -136,7 +136,7 @@
 
     &.outlined {
       border: 1px solid @science-sub_4;
-      color: @science-sub_4;
+      color: @science-gridbox;
 
       &:hover {
         border: 1px solid @science-sub_4-hover;
