--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -487,6 +487,7 @@ nav[aria-label="Pager"] {
   margin-top: 10px;
 }
 
+// Styling for older news and events lists
 .legacy-tile-link {
   color: inherit!important;
   display: block;
@@ -497,7 +498,7 @@ nav[aria-label="Pager"] {
     color: inherit;
     text-decoration: none;
 
-    .item-heading {
+    .item-heading, .media-heading {
       text-decoration: underline;
     }
   }
