--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -26,7 +26,7 @@
   .item-heading {
     .nyhedsoverskrift();
     margin: 7px 0;
-
+// To be deleted
     a {
       font-size: inherit;
       color: inherit;
@@ -37,6 +37,7 @@
         text-decoration: underline;
       }
     }
+    // To be deleted
   }
 
   .item-date {
