Footer fix for neutral stylesheet

--- a/docs/assets/css/ku-neutral/clean-base.less
+++ b/docs/assets/css/ku-neutral/clean-base.less
@@ -1,6 +1,6 @@
 @import "../../../../less/variables.less"; // Styles to remove global elemts from KU templates in order to make a neutral look.
 
-#globalfooter,
+#globalfooter >.container:first-child,
 #topbar_menu,
 .ku-branding-logo img,
 .ku-nav,
