--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -5,11 +5,6 @@
   position: relative;
 
   .ku-branding-logo {
-    // .logo-img {
-    //   .img-responsive;
-    //   // fix for IE 8-10 since svgs are disproportionately sized
-    //   width: 100% \9;
-    // }
     height: 83px;
     width: 61px;
     z-index: 10;
@@ -23,7 +18,7 @@
     @media (max-width: @screen-sm) {
       width: 50px;
       bottom: -20px;
-      left: 5px;
+      left: 0;
     }
 
     & > a {
