New colors for flexible boxes

--- a/less/variables.less
+++ b/less/variables.less
@@ -40,18 +40,38 @@
 // FAK colors
 @ku-red:                #901a1e;
 @ku-red-hover:          darken(@ku-red, 5%);
-@hum:                   #365aa5;
-@hum-hover:             darken(@hum, 5%);
-@science:               #46743c;
-@science-hover:         darken(@science, 5%);
-@sund:                  #2a216a;
-@sund-hover:            darken(@sund, 5%);
-@samf:                  #e13718;
-@samf-hover:            darken(@samf, 5%);
-@jura:                  #999632;
-@jura-hover:            darken(@jura, 5%);
-@teol:                  #66609e;
-@teol-hover:            darken(@teol, 5%);
+// @hum:                   #365aa5;
+// @hum-hover:             darken(@hum, 5%);
+// @science:               #46743c;
+// @science-hover:         darken(@science, 5%);
+// @sund:                  #2a216a;
+// @sund-hover:            darken(@sund, 5%);
+// @samf:                  #e13718;
+// @samf-hover:            darken(@samf, 5%);
+// @jura:                  #999632;
+// @jura-hover:            darken(@jura, 5%);
+// @teol:                  #66609e;
+// @teol-hover:            darken(@teol, 5%);
+
+// Color families
+@red1: @ku-red;
+@red2: #c73028;
+@red3: #e94c25;
+@blue1: #122947;
+@blue2: #425570;
+@blue3: #bac7d9;
+@teal1: #0a5963;
+@teal2: #197f8e;
+@teal3: #b7d7de;
+@green1: #39641c;
+@green2: #6a9526;
+@green3: #becaa8;
+@grey1: #3d3d3d;
+@grey2: @gray-666;
+@grey3: #e1dfdf;
+@white1: @white-color;
+@white2: #fefaf2;
+@white3: #ffbd38;
 
 // KU grid box sizes
 @gridbox0: 370px; // Special news box size
