--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -20,6 +20,78 @@
   border-radius: 2px;
   display: flex;
   flex-direction: column;
+  // Red family
+  &.red1 {
+    .gridbox-color(@white-color; @red1; darken(@red1, 5%); @red1; 83%);
+  }
+
+  &.red2 {
+    .gridbox-color(@white-color; @red2; darken(@red2, 5%); @red2; 83%);
+  }
+
+  &.red3 {
+    .gridbox-color(@white-color; @red3; darken(@red3, 5%); @red3; 83%);
+  }
+  // Blue family
+  &.blue1 {
+    .gridbox-color(@white-color; @blue1; darken(@blue1, 5%); @blue1; 83%);
+  }
+
+  &.blue2 {
+    .gridbox-color(@white-color; @blue2; darken(@blue2, 5%); @blue2; 83%);
+  }
+
+  &.blue3 {
+    .gridbox-color(@ku-gridbox-text; @blue3; darken(@blue3, 5%); @blue3; 83%);
+  }
+  // Teal family
+  &.teal1 {
+    .gridbox-color(@white-color; @teal1; darken(@teal1, 5%); @teal1; 83%);
+  }
+
+  &.teal2 {
+    .gridbox-color(@white-color; @teal2; darken(@teal2, 5%); @teal2; 83%);
+  }
+
+  &.teal3 {
+    .gridbox-color(@ku-gridbox-text; @teal3; darken(@teal3, 5%); @teal3; 83%);
+  }
+  // Green family
+  &.green1 {
+    .gridbox-color(@white-color; @green1; darken(@green1, 5%); @green1; 83%);
+  }
+
+  &.green2 {
+    .gridbox-color(@white-color; @green2; darken(@green2, 5%); @green2; 83%);
+  }
+
+  &.green3 {
+    .gridbox-color(@ku-gridbox-text; @green3; darken(@green3, 5%); @green3; 83%);
+  }
+  // Grey family
+  &.grey1 {
+    .gridbox-color(@white-color; @grey1; darken(@grey1, 5%); @grey1; 83%);
+  }
+
+  &.grey2 {
+    .gridbox-color(@white-color; @grey2; darken(@grey2, 5%); @grey2; 83%);
+  }
+
+  &.grey3 {
+    .gridbox-color(@ku-gridbox-text; @grey3; darken(@grey3, 5%); @grey3; 83%);
+  }
+  // White and yellow family
+  &.light1 {
+    .gridbox-color(@ku-gridbox-text; @white1; darken(@white1, 3%); @white1; 90%);
+  }
+
+  &.light2 {
+    .gridbox-color(@ku-gridbox-text; @white2; darken(@white2, 5%); @white2; 90%);
+  }
+
+  &.light3 {
+    .gridbox-color(@ku-gridbox-text; @white3; darken(@white3, 5%); @white3; 83%);
+  }
 
   &.faculty_color {
     background: @ku-red;
@@ -540,6 +612,7 @@
       .header {
         padding: 8px 18px 8px 10px;
       }
+
       .text {
         display: block;
       }
@@ -558,7 +631,6 @@
 /*
 * Mobile: All column types must behave like single column boxes
 */
-
 .gridbox {
   .all-single-column();
 
