--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -20,7 +20,7 @@
   border-radius: 2px;
   display: flex;
   flex-direction: column;
-  // Red family
+  // Reds family
   &.red1 {
     .gridbox-color(@white-color; @red1; darken(@red1, 5%); @red1; 83%);
   }
@@ -32,7 +32,7 @@
   &.red3 {
     .gridbox-color(@white-color; @red3; darken(@red3, 5%); @red3; 83%);
   }
-  // Blue family
+  // Blues family
   &.blue1 {
     .gridbox-color(@white-color; @blue1; darken(@blue1, 5%); @blue1; 83%);
   }
@@ -44,7 +44,7 @@
   &.blue3 {
     .gridbox-color(@ku-gridbox-text; @blue3; darken(@blue3, 5%); @blue3; 83%);
   }
-  // Teal family
+  // Teals family
   &.teal1 {
     .gridbox-color(@white-color; @teal1; darken(@teal1, 5%); @teal1; 83%);
   }
@@ -56,7 +56,7 @@
   &.teal3 {
     .gridbox-color(@ku-gridbox-text; @teal3; darken(@teal3, 5%); @teal3; 83%);
   }
-  // Green family
+  // Greens family
   &.green1 {
     .gridbox-color(@white-color; @green1; darken(@green1, 5%); @green1; 83%);
   }
@@ -68,7 +68,7 @@
   &.green3 {
     .gridbox-color(@ku-gridbox-text; @green3; darken(@green3, 5%); @green3; 83%);
   }
-  // Grey family
+  // Greys family
   &.grey1 {
     .gridbox-color(@white-color; @grey1; darken(@grey1, 5%); @grey1; 83%);
   }
@@ -80,7 +80,7 @@
   &.grey3 {
     .gridbox-color(@ku-gridbox-text; @grey3; darken(@grey3, 5%); @grey3; 83%);
   }
-  // White and yellow family
+  // Whites and yellows family
   &.light1 {
     .gridbox-color(@ku-gridbox-text; @white1; darken(@white1, 3%); @white1; 90%);
   }
