--- a/less/variables.less
+++ b/less/variables.less
@@ -40,18 +40,6 @@
 // FAK colors
 @ku-red:                #901a1e;
 @ku-red-hover:          darken(@ku-red, 5%);
-// @hum:                   #365aa5;
-// @hum-hover:             darken(@hum, 5%);
-// @science:               #46743c;
-// @science-hover:         darken(@science, 5%);
-// @sund:                  #2a216a;
-// @sund-hover:            darken(@sund, 5%);
-// @samf:                  #e13718;
-// @samf-hover:            darken(@samf, 5%);
-// @jura:                  #999632;
-// @jura-hover:            darken(@jura, 5%);
-// @teol:                  #66609e;
-// @teol-hover:            darken(@teol, 5%);
 
 // Color families
 @red1: @ku-red;
@@ -72,6 +60,9 @@
 @white1: @white-color;
 @white2: #fefaf2;
 @white3: #ffbd38;
+
+@gridbox-text-light: #fcfcfc;
+@gridbox-text-dark: #262626;
 
 // KU grid box sizes
 @gridbox0: 370px; // Special news box size
