Gridbox outlined text color

--- a/less/mixins/ku-gridbox-colors.less
+++ b/less/mixins/ku-gridbox-colors.less
@@ -19,7 +19,7 @@
 
   &.outlined {
     border: 1px solid @border;
-    color: @color;
+    color: @gridbox-text-dark;
 
     &:hover {
       border: 1px solid @hover;
