--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -4760,82 +4760,6 @@ div.calendarpicker {
   border-color: #aaa;
 }
 
-/* New subsite editing interface */
-/* #webstedinfo {
-  position: absolute;
-  right: 0;
-  width: 23em;
-  overflow: hidden;
-  z-index: 100;
-}
-
-#webstedinfo .webstedinfo-wrapper {
-  background-color: #F2F2F2;
-  border: solid 1px #ddd;
-  border-width: 1px 0 1px 1px;
-  transition: margin 0.5s;
-  width: 20em;
-  float: right;
-  position: relative;
-  padding: 1em 0;
-}
-
-#webstedinfo.closed .webstedinfo-wrapper {
-  margin-right: -19em;
-}
-
-#webstedinfo .toggle {
-  transform: rotate(-90deg);
-  -ms-transform: rotate(-90deg);
-  -webkit-transform: rotate(-90deg);
-  font-size: 16px;
-  position: absolute;
-  width: auto;
-  padding: 1em;
-  line-height: 1;
-  left: -4.7em;
-  top: 1.6em;
-  text-align: center;
-  margin: 0;
-  display: inline-block;
-  background: #ccc;
-  border-radius: 0.5em 0.5em 0 0;
-  cursor: pointer;
-}
-
-#webstedinfo .toggle:hover, #webstedinfo .toggle:active {
-  background: #aaa;
-  color: #fff;
-  text-decoration: none;
-}
-
-#webstedinfo h1 {
-  background-color: #ddd;
-  margin: 0 0 1em;
-  padding: 0.5em 1em;
-  font-weight: normal;
-}
-
-#webstedinfo p {
-  padding: 0 1em;
-  margin: 0;
-}
-
-#webstedinfo p.webstedvalue {
-  font-weight: bold;
-  padding-bottom: 1em;
-}
-
-#webstedinfo hr {
-  border-bottom: none;
-  border-left: none;
-  border-right: none;
-  color: #DDDDDD;
-}
-
-#webstedinfo div.no-website-spacer {
-  height: 2.5em;
-} */
 table.subsites2 {
   border: 0;
   width: 100%;
@@ -6008,9 +5932,15 @@ textarea[id*="extra_html_body"] {
   background-color: #efefef;
 }
 
+.right-side .item-list.with-img .item-left {
+  display: block;
+  float: right;
+  text-align: right;
+}
+
 /* Remove shortly */
 /* New subsite editing interface - comment for cmstest01*/
-#webstedinfo {
+/* #webstedinfo {
   position: absolute;
   right: 0;
   width: 23em;
@@ -6083,6 +6013,6 @@ textarea[id*="extra_html_body"] {
 
 #webstedinfo div.no-website-spacer {
   height: 2.5em;
-}
+} */
 
 /* end */
