--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -5932,7 +5932,7 @@ textarea[id*="extra_html_body"] {
   background-color: #efefef;
 }
 
-.right-side .item-list.with-img .item-left {
+#sidebar .item-list.with-img .item-right {
   display: block;
   float: right;
   text-align: right;
