News list html changes

--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -426,6 +426,9 @@ nav[aria-label="Pager"] {
 .two-one-one-column .column3 {
   .img-right();
   .list-img-right();
+  .item-list.with-img .item-left img {
+    float: right;
+  }
 }
 // Special hooks for calendar lists
 
