--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -5938,9 +5938,13 @@ textarea[id*="extra_html_body"] {
   text-align: right;
 }
 
+#sidebar .item-list.with-img .item-left img {
+  float: right;
+}
+
 /* Remove shortly */
 /* New subsite editing interface - comment for cmstest01*/
-/* #webstedinfo {
+#webstedinfo {
   position: absolute;
   right: 0;
   width: 23em;
@@ -6013,6 +6017,6 @@ textarea[id*="extra_html_body"] {
 
 #webstedinfo div.no-website-spacer {
   height: 2.5em;
-} */
+}
 
 /* end */
