Fix tiles for standard pages

--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -134,7 +134,7 @@
 }
 //style for single and double column spans
 
-#gridsidebar,
+.right-side,
 .one-two-column .column1,
 .quad-column,
 .triple-column,
