--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -5944,7 +5944,7 @@ textarea[id*="extra_html_body"] {
 
 /* Remove shortly */
 /* New subsite editing interface - comment for cmstest01*/
-#webstedinfo {
+/* #webstedinfo {
   position: absolute;
   right: 0;
   width: 23em;
@@ -6017,6 +6017,6 @@ textarea[id*="extra_html_body"] {
 
 #webstedinfo div.no-website-spacer {
   height: 2.5em;
-}
+} */
 
 /* end */
