--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -16,10 +16,10 @@
 
     &+ .item {
       border-top: 1px solid @gray;
-
-      &:last-child {
-        border-bottom: 1px solid @gray;
-      }
+    }
+    
+    &:last-child {
+      border-bottom: 1px solid @gray;
     }
   }
 
@@ -71,10 +71,11 @@
       .img-thumbnail;
       width: 55px;
     }
-
+    // to be deleted
     a {
       display: inline-block;
     }
+    // to be deleted
   }
 
   &.with-img {
@@ -320,7 +321,7 @@ nav[aria-label="Pager"] {
 }
 
 .readAll {
-  margin-top: 14px;
+  margin-top: 14px!important;
   margin-bottom: 0;
   border: 1px solid @text-color;
   padding: 6px 9px;
