--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -17,7 +17,7 @@
     &+ .item {
       border-top: 1px solid @gray;
     }
-    
+
     &:last-child {
       border-bottom: 1px solid @gray;
     }
@@ -321,7 +321,7 @@ nav[aria-label="Pager"] {
 }
 
 .readAll {
-  margin-top: 14px!important;
+  margin-top: 14px;
   margin-bottom: 0;
   border: 1px solid @text-color;
   padding: 6px 9px;
