Category/date adjustment in tiles

--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -64,7 +64,7 @@
 .tile-cat {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
 
   .date {
     font-weight: 700;
