Advanced list tweak

--- a/less/ku-advanced-lists.less
+++ b/less/ku-advanced-lists.less
@@ -9,6 +9,7 @@
   li {
     display: flex;
     flex-direction: column;
+    overflow: hidden;
     min-height: 100px;
     background-color: @gray-f5;
     border-radius: @border-radius-base;
