Cookie filter header

--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -294,6 +294,7 @@
 .cookiefilter-header {
   font-size: 18px;
   font-weight: 600;
+  line-height: @line-height-small;
 }
 // Special styling for placeholder in right columns:
 
