--- a/docs/assets/css/doctypes/fullwidthfrontpage.css
+++ b/docs/assets/css/doctypes/fullwidthfrontpage.css
@@ -1,5 +1,4 @@
 /* Full width front page styling */
-
 .main-content {
   padding-top: 0;
   padding-bottom: 23px;
@@ -9,4 +8,9 @@
   .gcrow:not(.double-column):not(.quad-column) [class*=col-sm-6] {
     margin-bottom: 0;
   }
+}
+
+.gridcontent>.row>.container {
+  padding-left: 13px;
+  padding-right: 13px;
 }
