--- a/less/navbar.less
+++ b/less/navbar.less
@@ -294,7 +294,7 @@
   > li > a {
     padding-top: 10px;
     padding-bottom: 10px;
-    line-height: @line-height-computed;
+    line-height: 1.47em;
   }
   @media (max-width: @grid-float-breakpoint-max) {
     // Dropdowns get custom display when collapsed
@@ -347,7 +347,7 @@
     > li {
       > a {
         padding: 0 7px;
-        line-height: @ku-topbar-height;
+        line-height: 2.15em;
         text-decoration: none;
 
         &:hover {
