Switching package csslint to stylelint due to lack of maintainance

--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -89,6 +89,14 @@ table.gcedit tbody th input.class {
   background-position: -142px 2px;
 }
 
+#gridcontent-dialog-class {
+  width: 30em;
+}
+
+#row-classes {
+  height: 100px;
+}
+
 #obvius_gridcontent_gridcontent_right .single-column .column-visibility-buttons {
   display: none
 }
