--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -212,7 +212,7 @@ body:not(.FullWidthFrontpage) .double-column {
         }
 
         .tile-content {
-          flex: 1 0 auto;
+          flex: 1 1 auto;
         }
       }
     }
@@ -231,6 +231,7 @@ body:not(.FullWidthFrontpage) .double-column {
 }
 @media all and (min-width: @screen-sm) {
   .newsbox {
+    padding-bottom: 8px;
     // Inserted as standalone grid element
     .tiles-x {
       .tilebox {
