--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -50,12 +50,13 @@ body {
   --scroll-bar: 10px;
 }
 
-// Add full-page-width to a row to make it stretch full width
+// Add full-page-width to a .row to make it stretch full width
 
 .full-page-width {
   width: 100vw;
   margin-left: calc(-50vw + 50%);
   margin-right: calc(-50vw + 50%);
+  margin-bottom: 0;
   overflow: hidden;
   position: relative;
 }
