--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -301,10 +301,10 @@
 
 .right-side {
   .cookiefilter {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
+    // position: absolute;
+    // top: 0;
+    // left: 0;
+    // bottom: 0;
     height: 100%;
     width: 100%;
     padding: 10px;
