--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -78,7 +78,7 @@
 
       .footer-heading {
         font-size: 14px;
-        line-height: 18px;
+        line-height: 1.3em;
         letter-spacing: 1px;
         text-transform: uppercase;
         font-weight: 700;
@@ -115,7 +115,7 @@
 
     li {
       padding: 0;
-      line-height: 20px;
+      line-height: 1.53em;
       font-size: @font-size-base;
       font-weight: normal;
 
