--- a/less/variables.less
+++ b/less/variables.less
@@ -207,7 +207,7 @@
 @font-size-base:          13px;
 @font-size-large:         floor((@font-size-base * 1.167)); // ~14px (mobile)
 @font-size-small:         ceil((@font-size-base * 0.89)); // ~11px
-@ku-branding-text-font-size: ceil((@font-size-base * 1.5)); //18px
+@ku-branding-text-font-size: ceil((@font-size-base * 1.5)); //20px
 
 @font-size-h1:            26px;
 @font-size-h2:            20px;
@@ -221,9 +221,9 @@
 @font-size-body-desktop:  13px;
 
 //** Unit-less `line-height` for use in components like buttons.
-@line-height-base:        1.5; // 18/12
+@line-height-base:        1.5;
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
-@line-height-computed:    floor((@font-size-base * @line-height-base)); // ~16px
+@line-height-computed:    floor((@font-size-base * @line-height-base)); // ~19px
 
 //** By default, this inherits from the `<body>`.
 @headings-font-family:    inherit;
