--- a/less/mixins/ku-gridbox-colors.less
+++ b/less/mixins/ku-gridbox-colors.less
@@ -1,8 +1,8 @@
 // Gridbox color variants
-// Use with values in this order: Text color, background color, hover color, border color, opacity
+// Use with values in this order: Text color, background color, hover color, border color, outlined text, opacity
 //
 
-.gridbox-color(@color; @background; @hover; @border; @transparency) {
+.gridbox-color(@color;  @background; @hover; @border; @outlinedText; @transparency) {
   background: @background;
   color: @color;
 
@@ -19,7 +19,7 @@
 
   &.outlined {
     border: 1px solid @border;
-    color: @gridbox-text-dark;
+    color: @outlinedText;
 
     &:hover {
       border: 1px solid @hover;
