--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -1,18 +1,21 @@
 /* Styling for ku.dk front page only. */
-.topbar-logo {
-  display: none !important;
+..ku-branding .ku-branding-text .ku-branding-text-major {
+  font-size: 24px;
 }
+/* .topbar-logo {
+  display: none !important;
+} */
 
 /* Hide navnetraek as we use graphics on the front page */
-.ku-branding-text-major, .ku-branding-text-sub {
+/* .ku-branding-text-major, .ku-branding-text-sub {
   display: none;
-}
+} */
 
 video {
   width: 100%;
 }
 
-.ku-branding-text {
+/* .ku-branding-text {
   background-image: url("https://bootstrap.secure.ku.dk/img/ku_header_2_lin_dk.svg");
   background-position: left bottom 36%;
   background-repeat: no-repeat;
@@ -25,9 +28,9 @@ video {
 html:lang(en) .ku-branding-text {
   background-size: contain;
   background-image: url("https://bootstrap.secure.ku.dk/img/ku_header_2_lin_en.svg");
-}
+} */
 
-@media all and (min-width: 481px) {
+/* @media all and (min-width: 481px) {
   .ku-branding-text {
     background-image: url("https://bootstrap.secure.ku.dk/img/ku_header.svg");
     background-position: left bottom 31%;
@@ -62,12 +65,10 @@ html:lang(en) .ku-branding-text {
 }
 
 @media all and (min-width: 992px) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-
-  /* IE11 only */
   .ku-branding-text {
     background-position: left bottom -10px;
   }
-}
+} */
 
 .breadcrumbs, .local-footer, .item .item-teaser {
   display: none;
