Front page top logo

--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -1,5 +1,5 @@
 /* Styling for ku.dk front page only. */
-..ku-branding .ku-branding-text .ku-branding-text-major {
+.ku-branding .ku-branding-text .ku-branding-text-major {
   font-size: 24px;
 }
 /* .topbar-logo {
