--- a/less/variables.less
+++ b/less/variables.less
@@ -60,6 +60,7 @@
 @white1: @white-color;
 @white2: #fefaf2;
 @white3: #ffbd38;
+@white4: #9e6900; //Another yellowish color just for outline.
 
 @gridbox-text-light: #fcfcfc;
 @gridbox-text-dark: #262626;
