--- a/less/mixins/ku-gridbox-colors.less
+++ b/less/mixins/ku-gridbox-colors.less
@@ -21,6 +21,10 @@
     border: 1px solid @border;
     color: @outlinedText;
 
+    .header {
+      color: @color!important;
+    }
+
     &:hover {
       border: 1px solid @hover;
     }
