--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -1,5 +1,4 @@
 /* Slider */
-
 .gallery-nav,
 .slide-gallery,
 .slideshow {
@@ -46,7 +45,6 @@
   // &:focus {
   //   outline: none;
   // }
-
   &.dragging {
     cursor: grabbing;
   }
@@ -416,6 +414,80 @@
 
       &.full-bg {
         background: @brown;
+      }
+    }
+
+    &.box {
+      &-red1 {
+        .slider-overlay-colors(@gridbox-text-light; @red1; 83%);
+      }
+
+      &-red2 {
+        .slider-overlay-colors(@gridbox-text-light; @red2; 83%);
+      }
+
+      &-red3 {
+        .slider-overlay-colors(@gridbox-text-light; @red3; 83%);
+      }
+      // Blues family
+      &-blue1 {
+        .slider-overlay-colors(@gridbox-text-light; @blue1; 83%);
+      }
+
+      &-blue2 {
+        .slider-overlay-colors(@gridbox-text-light; @blue2; 83%);
+      }
+
+      &-blue3 {
+        .slider-overlay-colors(@gridbox-text-dark; @blue3; 83%);
+      }
+      // Teals family
+      &-teal1 {
+        .slider-overlay-colors(@gridbox-text-light; @teal1; 83%);
+      }
+
+      &-teal2 {
+        .slider-overlay-colors(@gridbox-text-light; @teal2; 83%);
+      }
+
+      &-teal3 {
+        .slider-overlay-colors(@gridbox-text-dark; @teal3; 83%);
+      }
+      // Greens family
+      &-green1 {
+        .slider-overlay-colors(@gridbox-text-light; @green1; 83%);
+      }
+
+      &-green2 {
+        .slider-overlay-colors(@gridbox-text-light; @green2; 83%);
+      }
+
+      &-green3 {
+        .slider-overlay-colors(@gridbox-text-dark; @green3; 83%);
+      }
+      // Greys family
+      &-grey1 {
+        .slider-overlay-colors(@gridbox-text-light; @grey1; 83%);
+      }
+
+      &-grey2 {
+        .slider-overlay-colors(@gridbox-text-light; @grey2; 83%);
+      }
+
+      &-grey3 {
+        .slider-overlay-colors(@gridbox-text-dark; @grey3; 83%);
+      }
+      // Whites and yellows family
+      &-light1 {
+        .slider-overlay-colors(@gridbox-text-dark; @white1; 90%);
+      }
+
+      &-light2 {
+        .slider-overlay-colors(@gridbox-text-dark; @white2; 90%);
+      }
+
+      &-light3 {
+        .slider-overlay-colors(@gridbox-text-dark; @white3; 83%);
       }
     }
 
