--- a/less/faculties/faelles.less
+++ b/less/faculties/faelles.less
@@ -3,6 +3,7 @@
 @import "../mixins.less"; // FA styles
 // --------------------------------------------------
 // Special colors for studier.ku.dk
+
 .soeg-optagelse {
   background: #bf1e6f !important;
 
@@ -11,8 +12,8 @@
   }
 }
 
-#botxo-openImg-, #botxo-button- {
-  &:focus {
+#botxo-button- {
+  &:focus-within {
     .tab-focus-v2();
   }
 }
