New gridbox color

--- a/less/variables.less
+++ b/less/variables.less
@@ -52,7 +52,7 @@
 @teal2: #197f8e;
 @teal3: #b7d7de;
 @green1: #39641c;
-@green2: #6a9526;
+@green2: #4B8325; // #6a9526
 @green3: #becaa8;
 @grey1: #3d3d3d;
 @grey2: @gray-666;
